--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -15,9 +15,9 @@
     width: 30%;
     padding: 1em;
 }
-.secondCol,.thirdCol,.forthCol{
+.secondCol,.thirdCol{
     padding: 0 0.5em;
-    border-left: grey solid 0.5px;
+    border-right: grey solid 0.5px;
 }
 .Footer.Items,.about,.Footer.firstCol{
     color: rgb(204, 204, 204);
@@ -57,6 +57,11 @@
 }
 .copyright{
     color: var(--white);
+}
+@media screen and (max-width:620px) {
+.Footer.footer{
+    flex-wrap: wrap;
+}
 }
 @media screen and (max-width:510px) {
 .Footer.about{
