--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -15,9 +15,9 @@
     width: 30%;
     padding: 1em;
 }
-.secondCol,.thirdCol{
+.secondCol,.thirdCol,.forthCol{
     padding: 0 0.5em;
-    border-right: grey solid 0.5px;
+    border-left: grey solid 0.5px;
 }
 .Footer.Items,.about,.Footer.firstCol{
     color: rgb(204, 204, 204);
@@ -29,6 +29,7 @@
 .Footer.Items:hover{
     transform: scale(1.1);
     transition-duration: 3ms;
+    cursor: pointer;
 }
 .Footer.icons{
     display: flex;
@@ -61,6 +62,9 @@
 @media screen and (max-width:620px) {
 .Footer.footer{
     flex-wrap: wrap;
+}
+.secondCol{
+    border: none;
 }
 }
 @media screen and (max-width:510px) {
