--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -3,7 +3,7 @@
     justify-content: space-around;
     background-color:var(--white);
     box-shadow:1px 1px 12px #333333; 
-    padding: 0.5em 1.5em;  
+    padding: 0.5em 1.5em; 
 }
 .Nav.logoContainer{
     display: flex;
@@ -58,6 +58,24 @@
     color: unset;
     text-decoration: none;
 }
+@media screen and (min-width:800px) {
+    .toggle.navList{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    width: 60%;
+    margin: 0;        
+    }
+    .toggle.itemList{
+     display: inline;
+     cursor: pointer;
+    } 
+    .toggle.itemList:hover{
+     transform: scale(1.1);
+    transition-duration: 0.5ms;
+    }
+}
 @media screen and (max-width:800px) {
 .Nav.navContainer{
     display: block;
@@ -76,12 +94,12 @@
 .Nav.navList{
     display: none;
 }
+.Nav.itemList{
+    display: none;
+}
 .toggle.navList{
     display: block;
     
-}
-.Nav.itemList{
-    display: none;
 }
 .toggle.itemList{
     display: block;
