--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -3,7 +3,10 @@
     justify-content: space-around;
     background-color:var(--white);
     box-shadow:1px 1px 12px #333333; 
-    padding: 0.5em 1.5em; 
+    padding: 0.5em 1.5em;
+    position: sticky;
+    top: 0;
+    z-index: 1000; 
 }
 .Nav.logoContainer{
     display: flex;
@@ -18,12 +21,15 @@
     color: var(--darkBlue);
     text-align: left;
 }
+.logoContainer a{
+text-decoration: none;
+}
 .Nav.navList{
     display: flex;
     justify-content: space-around;
     align-items: center;
     list-style: none;
-    width: 60%;
+    width: 85%;
     margin: 0;
 }
 .Nav.itemList{
@@ -104,6 +110,7 @@
 .toggle.itemList{
     display: block;
     text-align: center;
+    padding: 1em 0 0
 } 
 .toggle.itemList:hover{
     transform: scale(1.1);
