--- a/src/style/Products.css
+++ b/src/style/Products.css
@@ -1,32 +1,42 @@
-.Products{
+
+
+
+.ProductContainer{
+  margin: 3em;
+}
+.ProductContainer .titleProducts {
+  text-align: center;
+}
+
+.ProductContainer .titleProducts {
+  text-align: center;
+  margin-bottom: 1.2em;
+  font-weight: 600;
+}
+
+.ProductContainer .main-containerProduct {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
-  gap: 1em;  
-  margin: 3em auto;
-}
-
-.Productsh1 {
-  margin-top: 3em;
-  display: flex;
+  grid-template-columns: auto auto auto;
   justify-content: center;
+  justify-items: center;
+  align-items: stretch;
+  align-content: center;
+  grid-gap: 2em;
 }
 
-@media (max-width:768px)  {
 
-    .Products{  
-        grid-template-columns: repeat(2,1fr);
 
-      }
-    
+ @media   (max-width:900px)  {
+ .ProductContainer .main-containerProduct{
+    grid-template-columns: auto auto;
+  }
 }
+@media only screen and (max-width: 575px) {
+ .ProductContainer .main-containerProduct{
+    grid-template-columns: auto;
+  }
+}  
 
-@media (max-width:460px){
-    .Products{  
-        grid-template-columns: repeat(1,1fr) !important;
-        width: 97%;
-      }
-    
-}
 
 
 
