--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -56,6 +56,10 @@
     
     }
 }
+.footerAnchor,.directLink{
+    text-decoration: none;
+    color: gainsboro;
+}
 .copyright{
     color: var(--white);
 }
