--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -1,5 +1,6 @@
+
 .login {
-  height: 100vh;
+  height: 70vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,53 +8,52 @@
 .form-container {
   display: flex;
   flex-direction: column;
-  height: 70%;
-  width: 30%;
-  padding: 1em;
-  border-radius: 20px;
-  background-color: white;
+  height: 78%;
+  width: 33%;
+  padding: .7em;
+  border-radius: 1em;
+  background-color: var(--darkBlue);
   justify-content: center;
   align-items: center;
   text-align: center;
   box-shadow: 0 0 5px 2px #6c757d8a;
 }
 div.login > form >input {
-  height: 4.5em;
+  height: 3em;
   width: 23em;
-  background-color: rgb(235, 232, 232);
+  background-color: rgb(252, 248, 248);
   border: 0px;
-  box-shadow: 1px 3px 6px 1px rgb(192, 192, 192);
-  border-radius: 10px;
+  border-radius: 5px;
   align-items: center;
   text-align: center;
 }
 
 div.login > form > button {
-  height: 3.8em;
+  height: 3.2em;
   width: 23em;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: var(--skyBlue);
   border-color: var(--skyBlue);
 }
 
 @media only screen and (max-width: 1240px) and (min-width: 780px) {
   .form-container {
-    height: 70%;
+    height: 75%;
     width: 40%;
     padding: 0.5em;
   }
   div.login > form >input {
-    height: 4em;
+    height: 3em;
     width: 70%;
   }
   div.login > form > button {
-    height: 3.8em;
+    height: 3em;
     width: 70%;
   }
 }
 @media only screen and (max-width: 780px) and (min-width: 500px) {
   .form-container {
-    height: 60%;
+    height: 70%;
     width: 60%;
   }
   div.login > form >input {
@@ -67,7 +67,7 @@ div.login > form > button {
 }
 @media only screen and (max-width: 500px) {
   .form-container {
-    height: 60%;
+    height: 70%;
     width: 100%;
   }
   div.login > form >input {
