--- a/src/style/Register.css
+++ b/src/style/Register.css
@@ -1,58 +1,57 @@
 .register {
-  height: 100vh;
+  height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.form-container {
+.form1-container {
   display: flex;
   flex-direction: column;
-  height: 78%;
-  width: 30%;
+  height: 94%;
+  width: 33%;
   padding: 1em;
   border-radius: 20px;
-  background-color: white;
+  background-color: var(--darkBlue);
   justify-content: center;
   align-items: center;
   text-align: center;
   box-shadow: 0 0 5px 2px #6c757d8a;
 }
 div.register > form >input {
-  height: 4.5em;
+  height: 3em;
   width: 23em;
-  background-color: rgb(235, 232, 232);
+  background-color: rgb(252, 248, 248);
   border: 0px;
-  box-shadow: 1px 3px 6px 1px rgb(192, 192, 192);
-  border-radius: 10px;
+  border-radius: 5px;
   align-items: center;
   text-align: center;
 }
 div.register > form > button {
-  height: 3.8em;
+  height: 3.2em;
   width: 23em;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: var(--skyBlue);
   border-color: var(--skyBlue);
 }
 
 @media only screen and (max-width: 1240px) and (min-width: 780px) {
-  .form-container {
+  .form1-container {
     height: 70%;
     width: 40%;
     padding: 0.5em;
   }
   div.register > form >input {
-    height: 4em;
+    height: 3em;
     width: 70%;
   }
   div.register > form > button {
-    height: 3.8em;
+    height: 3em;
     width: 70%;
   }
 }
 @media only screen and (max-width: 780px) and (min-width: 500px) {
-  .form-container {
-    height: 60%;
+  .form1-container {
+    height: 70%;
     width: 60%;
   }
   div.register > form >input {
@@ -65,8 +64,8 @@ div.register > form > button {
   }
 }
 @media only screen and (max-width: 500px) {
-  .form-container {
-    height: 60%;
+  .form1-container {
+    height: 70%;
     width: 100%;
   }
   div.register > form >input {
