--- a/src/style/UserProfile.css
+++ b/src/style/UserProfile.css
@@ -2,9 +2,9 @@
       display:flex;
       flex-direction: column;
       align-items: center;
-      margin: 0 auto;
+      /* margin: 0 auto; */
       background-color: var(--darkBlue);
-      width: 40%;
+      /* width: 40%; */
       border-radius: 1em;
       box-shadow: 0px 0px 3px 2px #ddd;
       color:white;
