--- a/src/style/Card.css
+++ b/src/style/Card.css
@@ -1,5 +1,3 @@
-
-
 .image-containerCard img {
   width: 9em;
   height: 9em;
@@ -27,7 +25,6 @@ div .card-title {
   margin-bottom: 0;
 }
 
-
 .Card {
   width: 17em;
   display: flex;
@@ -53,15 +50,12 @@ div .card-title {
   padding: 0.5em;
 }
 
-
-
-.PriceCard{
-  border-radius: 4px;
-  background-color: var(--darkBlue);
+.PriceCard {
   padding: 0.3125em;
-  font-size: 0.8em;
+  font-size: 1em;
   margin: 0.5em;
-  color: white;
+  color: black;
+  font-weight: 600;
 }
 
 .btn-icon {
@@ -75,19 +69,17 @@ div .card-title {
   right: -0.3125em;
 }
 
-
-
 .add-to-cart-btn:hover {
   cursor: pointer;
   box-shadow: 1px 0px 0px 0px #aca9a9;
-  background-color: #efb436d0;
+  background-color: #84add6ed;
 }
 
 .add-to-cart-btn {
   display: flex;
   gap: 0.4375em;
   margin-top: 0.5em;
-  background-color: #f78f1e;
+  background-color: #16599ced;
   padding: 0.3125em;
   border-radius: 4px;
   box-shadow: 0px 0px 2px 1px #aca9a9;
@@ -96,6 +88,8 @@ div .card-title {
   align-items: center;
   justify-content: center;
   transition: background-color 0.5s ease;
+  color: white;
+  margin-bottom: 0.5em;
 }
 
 .image-containerCard img:hover {
@@ -114,5 +108,3 @@ div .card-title {
   background: linear-gradient(to bottom, #a7c6bc00, #9ebdc4);
   background: -webkit-linear-gradient(to bottom, #4ca1af, #2c3e50);
 }
-
-
