--- a/src/style/saleStyle.css
+++ b/src/style/saleStyle.css
@@ -1,4 +1,4 @@
-.salesProductContainer{
+.salesProductContainer {
   margin: 3em;
 }
 .titleOfSupplements {
@@ -69,12 +69,11 @@ div .sale-title {
 }
 
 .sale-price {
-  border-radius: 4px;
-  background-color: var(--darkBlue);
   padding: 0.3125em;
-  font-size: 0.8em;
+  font-size: 1em;
   margin: 0.5em;
-  color: white;
+  color: black;
+  font-weight: 600;
 }
 
 .btn-icon {
@@ -101,14 +100,14 @@ div .sale-title {
 .add-to-cart-btn:hover {
   cursor: pointer;
   box-shadow: 1px 0px 0px 0px #aca9a9;
-  background-color: #efb436d0;
+  background-color: #84add6ed;
 }
 
 .add-to-cart-btn {
   display: flex;
   gap: 0.4375em;
   margin-top: 0.5em;
-  background-color: #f78f1e;
+  background-color: #16599ced;
   padding: 0.3125em;
   border-radius: 4px;
   box-shadow: 0px 0px 2px 1px #aca9a9;
@@ -117,6 +116,8 @@ div .sale-title {
   align-items: center;
   justify-content: center;
   transition: background-color 0.5s ease;
+  color: white;
+  margin-bottom: 0.5em;
 }
 
 .image-container img:hover {
