--- a/src/style/ChoosenItem.css
+++ b/src/style/ChoosenItem.css
@@ -11,6 +11,10 @@
     font-weight: 600;
 
 }
+
+.oneChosenItemContainer .delete i{
+    cursor: pointer;
+}
 .oneChosenItemContainer>*{
     min-width: 20%;
 }
