--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -32,6 +32,17 @@ text-decoration: none;
     width: 85%;
     margin: 0;
 }
+.Nav .middleList{
+    display: flex;
+    justify-content: space-around;
+    width: 40%;
+    margin: 0 auto;
+}
+.Nav.rightList{
+    display: flex;
+    gap: 1em;
+    align-items: center;
+}
 .Nav.itemList{
     display: inline;
     cursor: pointer;
@@ -63,6 +74,36 @@ text-decoration: none;
 .Nav.navContainer ul li a{
     color: unset;
     text-decoration: none;
+}
+.Nav.profileDropList{
+    display: none;
+}
+.Nav.dropIcon{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    position: absolute;
+    right: 1.5%;
+    top: 30%;
+}
+.dropIcon a{
+    color: black;
+    font-style: normal;
+    background-color: white;
+}
+.dropIcon:hover .Nav.profileDropList{
+    display: contents;
+    box-shadow: grey 1px 1px 8px;
+    background-color: white;
+    position: absolute;
+    width: 10%;
+    justify-content: center;
+    transition-duration: 2ms;
+    top: 20%;
+}
+.toggle.dropIcon{
+    position: relative;
 }
 @media screen and (min-width:800px) {
     .toggle.navList{
@@ -110,13 +151,14 @@ text-decoration: none;
 .toggle.itemList{
     display: block;
     text-align: center;
-    padding: 1em 0 0
+    padding: 1em 0 ;
+    text-decoration: none;
 } 
 .toggle.itemList:hover{
-    transform: scale(1.1);
+    color: var(--darkBlue);
     transition-duration: 0.5ms;
-    background: var(--darkBlue);
-    color: var(--white);
+    gap: 1em;
+    
 }
 .Nav.btns{
     display: none;
