--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -61,7 +61,6 @@ text-decoration: none;
     color: var(--white);
     border-radius: 2em;
     border: black 0.5px solid;
-    margin-left: 1em;
 }
 .Nav.btn:hover{
     transform: scale(1.03);
@@ -80,10 +79,9 @@ text-decoration: none;
 }
 .Nav.dropIcon{
     display: flex;
-    flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-    position: absolute;
+    /* position: absolute; */
     right: 1.5%;
     top: 30%;
 }
@@ -93,17 +91,16 @@ text-decoration: none;
     background-color: white;
 }
 .dropIcon:hover .Nav.profileDropList{
-    display: contents;
+    display: flex;
+    flex-direction: column;
     box-shadow: grey 1px 1px 8px;
     background-color: white;
+    padding: 1em;
     position: absolute;
-    width: 10%;
     justify-content: center;
     transition-duration: 2ms;
-    top: 20%;
-}
-.toggle.dropIcon{
-    position: relative;
+    top: 80%;
+    margin: 0 auto;
 }
 @media screen and (min-width:800px) {
     .toggle.navList{
