--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -74,7 +74,7 @@ text-decoration: none;
     color: unset;
     text-decoration: none;
 }
-.Nav.profileDropList{
+.Nav.profileDropList,.toggle.profileDropList{
     display: none;
 }
 .Nav.dropIcon{
@@ -100,6 +100,12 @@ text-decoration: none;
     justify-content: center;
     transition-duration: 2ms;
     top: 80%;
+    margin: 0 auto;
+}
+.dropIcon:hover .toggle.profileDropList{
+    display: block;
+    background-color: white;
+    transition-duration: 2ms;
     margin: 0 auto;
 }
 @media screen and (min-width:800px) {
